@@ -401,7 +401,7 @@ static int  lpc31_epdisable(FAR struct usbdev_ep_s *ep);
 static FAR struct usbdev_req_s *lpc31_epallocreq(FAR struct usbdev_ep_s *ep);
 static void lpc31_epfreereq(FAR struct usbdev_ep_s *ep,
               FAR struct usbdev_req_s *);
-#ifdef CONFIG_LPC31_USBDEV_DMA
+#ifdef CONFIG_USBDEV_DMA
 static void *lpc31_epallocbuffer(FAR struct usbdev_ep_s *ep, unsigned bytes);
 static void lpc31_epfreebuffer(FAR struct usbdev_ep_s *ep, FAR void *buf);
 #endif
@@ -438,7 +438,7 @@ static const struct usbdev_epops_s g_epops =
   .disable     = lpc31_epdisable,
   .allocreq    = lpc31_epallocreq,
   .freereq     = lpc31_epfreereq,
-#ifdef CONFIG_LPC31_USBDEV_DMA
+#ifdef CONFIG_USBDEV_DMA
   .allocbuffer = lpc31_epallocbuffer,
   .freebuffer  = lpc31_epfreebuffer,
 #endif
@@ -1955,11 +1955,16 @@ static void lpc31_epfreereq(FAR struct usbdev_ep_s *ep, FAR struct usbdev_req_s 
  *
  *******************************************************************************/
 
-#ifdef CONFIG_LPC31_USBDEV_DMA
+#ifdef CONFIG_USBDEV_DMA
 static void *lpc31_epallocbuffer(FAR struct usbdev_ep_s *ep, unsigned bytes)
 {
   usbtrace(TRACE_EPALLOCBUFFER, privep->epphy);
-  return malloc(bytes)
+
+#ifdef CONFIG_USBDEV_DMAMEMORY
+  return usbdev_dma_alloc(bytes);
+#else
+  return malloc(bytes);
+#endif
 }
 #endif
 
@@ -1971,11 +1976,16 @@ static void *lpc31_epallocbuffer(FAR struct usbdev_ep_s *ep, unsigned bytes)
  *
  *******************************************************************************/
 
-#ifdef CONFIG_LPC31_USBDEV_DMA
+#ifdef CONFIG_USBDEV_DMA
 static void lpc31_epfreebuffer(FAR struct usbdev_ep_s *ep, FAR void *buf)
 {
   usbtrace(TRACE_EPFREEBUFFER, privep->epphy);
+
+#ifdef CONFIG_USBDEV_DMAMEMORY
+  usbdev_dma_free(buf);
+#else
   free(buf);
+#endif
 }
 #endif
 
